k8s/base/account-service-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: account-service
  namespace: fintrack
spec:
  hosts:
    - account-service.fintrack.svc.cluster.local
  http:
    - route:
        - destination:
            host: account-service.fintrack.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: account-service.fintrack.svc.cluster.local
            subset: v2
          weight: 10
